syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";
package rgservcie;
option cc_generic_services = true;

message StartMsRequest
{
  uint32 ms_node_id = 1;
  IpPort rpc_client = 2;
  IpPort rpc_server = 3;
}

service RgService 
{
  rpc StartMs (StartMsRequest) returns (google.protobuf.Empty);
}
